--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "board.gitpad.pl",
   "version": "0.0.1",
-  "description": "show all repositories on board",
-  "main": "vue.js",
+  "description": "show all info about gihub repositories",
+  "main": "api.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/gitpad-pl/board.git"
@@ -12,8 +12,6 @@
     "build": "webpack -p"
   },
   "keywords": [
-    "vuejs",
-    "vuex",
     "note",
     "gitpad"
   ],
@@ -21,29 +19,9 @@
   "company": "Softreck OÜ",
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "^6.7.6",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-transform-runtime": "^6.7.5",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-runtime": "^5.8.38",
-    "css-loader": "^0.23.1",
-    "marked": "*",
-    "pug": "^2.0.3",
-    "simplemde": "^1.11.2",
-    "vue-hot-reload-api": "^1.3.2",
-    "vue-html-loader": "^1.2.2",
-    "vue-loader": "^8.2.3",
-    "vue-style-loader": "^1.0.0",
-    "webpack": "^1.12.15",
-    "webpack-dev-server": "^1.14.1"
+
   },
   "dependencies": {
-    "jquery": "^3.4.1",
-    "vue": "^1.0.21",
-    "vue-draggable-nested-tree": "^2.2.17",
-    "vuedraggable": "^2.20.0",
-    "vuejs-tree": "^2.0.0-0",
-    "vuex": "^0.6.2",
-    "xmlhttprequest": "^1.8.0"
+
   }
 }
