--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "homepage": "https://github.com/gitpad-pl/github#readme",
   "dependencies": {
+    "fs": "0.0.1-security",
     "xmlhttprequest": "^1.8.0"
   }
 }
