--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
   },
   "homepage": "https://github.com/gitpad-pl/github#readme",
   "dependencies": {
-    "fs": "0.0.1-security",
-    "xmlhttprequest": "^1.8.0"
+    "axios": "^0.18.0"
   }
 }
